[package]
name = "philiprehberger-cron-parser"
version = "0.1.3"
edition = "2021"
authors = ["Philip Rehberger"]
description = "Cron expression parsing, scheduling, and human-readable descriptions"
license = "MIT"
repository = "https://github.com/philiprehberger/rs-cron-parser"
keywords = ["cron", "scheduler", "parser", "time", "job"]
categories = ["date-and-time", "parser-implementations"]
